# cross-platform-rust-database-access

./: readme.md
android/: .gitignore
android/app/: build.gradle  readme.md
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/android/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/gradle/wrapper/: gradle-wrapper.properties
ios/: .gitignore  readme.md
ios/ios/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
ios/ios.xcodeproj/: project.pbxproj
ios/ios.xcodeproj/project.xcworkspace/xcuserdata/logan.xcuserdatad/: UserInterfaceState.xcuserstate
nodejs/: .gitignore  README.md  database.sqlite  package-lock.json  package.json
nodejs/lib/: index.js
nodejs/native/: Cargo.toml
nodejs/native/src/: lib.rs
rust-android/: Cargo.toml
rust-android/src/: lib.rs
rust-core/: Cargo.toml  readme.md
rust-core/src/: lib.rs
rust-ios/: .gitignore  Cargo.toml
rust-ios/src/: lib.rs
scripts/: build-android.sh  build-ios.sh  build-nodejs.sh  build.sh
