[package]
name = "rust-android"
version = "0.1.0"
authors = ["Logan Keenan <d.logankeenan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-core = {path= "../rust-core"}

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.11.0", default-features = false }

