[package]
name = "rust-ios"
version = "0.1.0"
authors = ["Logan Keenan <d.logankeenan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
rust-core = {path= "../rust-core"}
